# deepspeech2

./: .gitignore  deepspeech2.ipynb  pyproject.toml
src/: deepspeech2.ipynb  train_deepspeed2.py
