[project]
name = "deepspeech2"
version = "0.1.0"
description = "ASR using Deepspeech2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "khmercut>=0.1.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "datasets>=4.1.1",
    "jiwer>=4.0.0",
    "khmercut>=0.1.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "torchcodec>=0.7.0",
    "tqdm>=4.67.1",
    "gradio>=5.3.0",
    "pytorch-lightning>=2.5.5",
    "ipykernel>=7.1.0",
]



[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
